# llmcc

./: .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .llmccignore  .mcp.json  AGENTS.md  AGENT_OUTPUT_EXECUTION_PLAN.html  AGENT_OUTPUT_EXECUTION_PLAN.md  CLAUDE.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  TODO.md  depth_1_crate.dot  depth_2_module.dot  depth_3_file.dot  justfile  pyproject.toml  setup.py
.cargo/: config.toml
.github/: RELEASE_GUIDE.md
agent/: README.md  package-lock.json  package.json
bench/: projects.toml
bench/llmcc_bench/: README.md  __init__.py  __main__.py  benchmark.py  clean.py  compare.py  core.py  eval.py  fetch.py  generate.py  pyproject.toml  report.py
bench/llmcc_bench/agent/: __init__.py  config.py  metrics.py  planner.py  report.py  runner.py  tasks.py
crates/llmcc/: Cargo.toml  main.rs
crates/llmcc-bindings/: Cargo.toml  build.rs  pyproject.toml
crates/llmcc-bindings/src/: lib.rs
crates/llmcc-bumpalo/: Cargo.toml  README.md
crates/llmcc-bumpalo/src/: lib.rs
crates/llmcc-cli/: Cargo.toml
crates/llmcc-cli/src/: discovery.rs  lib.rs  main.rs  options.rs  output.rs  pipeline.rs  profile.rs  runner.rs
crates/llmcc-cli/tests/: agent_outputs.rs
crates/llmcc-collect/: Cargo.toml
crates/llmcc-collect/src/: collect.rs  lib.rs  types.rs
crates/llmcc-core/: CUSTOM_PARSER_GUIDE.md  Cargo.toml  REFACTORING_NOTES.md  TEST_DOCUMENTATION.md
crates/llmcc-core/examples/: custom_parser.rs
crates/llmcc-core/src/: arena.rs  block.rs  block_rel.rs  bump.rs  context.rs  file.rs  graph.rs  graph_adapters.rs  graph_aggregate.rs  graph_builder.rs  graph_collect.rs  graph_query.rs  graph_render.rs  graph_semantics.rs  id.rs  interner.rs  ir.rs  ir_builder.rs  ir_query.rs  lang_def.rs  lang_registry.rs  lib.rs  meta.rs  module_path.rs  pagerank.rs  printer.rs  query.rs  resolve.rs  scope.rs  symbol.rs  trie.rs  visit.rs
crates/llmcc-core/src/tests/: mod.rs  simple_lang.rs
crates/llmcc-core/tests/: graph_builder_integration.rs  project_graph.rs
crates/llmcc-cpp/: Cargo.toml  README.md  build.rs
crates/llmcc-cpp/src/: bind.rs  collect.rs  infer.rs  lib.rs  pattern.rs  token.rs  token_map.toml
crates/llmcc-csharp/: Cargo.toml  README.md  build.rs
crates/llmcc-csharp/src/: bind.rs  collect.rs  lib.rs  token.rs  token_map.toml
crates/llmcc-descriptor/: Cargo.toml
crates/llmcc-descriptor/src/: builder.rs  call.rs  class.rs  enumeration.rs  function.rs  implementation.rs  import.rs  lib.rs  meta.rs  module.rs  structure.rs  types.rs  variable.rs  visibility.rs
crates/llmcc-dot/: Cargo.toml
crates/llmcc-dot/src/: aggregate.rs  collect.rs  component.rs  detail.rs  dot.rs  emit.rs  file.rs  lib.rs  types.rs
crates/llmcc-error/: Cargo.toml
crates/llmcc-error/src/: error.rs  kind.rs  lib.rs  status.rs
crates/llmcc-format/: Cargo.toml  README.md
crates/llmcc-format/src/: lib.rs
crates/llmcc-py/: Cargo.toml  README.md  build.rs
crates/llmcc-py/src/: bind.rs  collect.rs  infer.rs  lib.rs  pattern.rs  token.rs  token_map.toml  util.rs
crates/llmcc-resolver/: Cargo.toml
crates/llmcc-resolver/src/: binder.rs  call_target.rs  collector.rs  lib.rs  type_expr.rs
crates/llmcc-rust/: Cargo.toml  README.md  build.rs  token_map.toml
crates/llmcc-rust/src/: b.cs  bind.rs  collect.rs  expr.rs  function.rs  infer.rs  lang.rs  lib.rs  path.rs  pattern.rs  resolve.rs  token.rs  token_map.toml  ty.rs  util.rs
crates/llmcc-rust/src/bind/: constants.rs  inference.rs  linker.rs  mod.rs  resolution.rs  visitor.rs
crates/llmcc-rust/src/describe/: call.rs  enumeration.rs  function.rs  implementation.rs  mod.rs  module.rs  parameter.rs  structure.rs  variable.rs
crates/llmcc-rust/src/descriptor/: TODO.txt  call.rs  enumeration.rs  function.rs  mod.rs  structure.rs  variable.rs
crates/llmcc-rust/tests/: bind_dependencies.rs  call_descriptor.rs  enum_descriptor.rs  function_descriptor.rs  graph.rs  graph_builder_integration.rs  graph_linking.rs  impl_from.rs  project_graph.rs  query_examples.rs  query_integration.rs  rustfmt.toml  scope_insertion.rs  structure_descriptor.rs  test_bind.rs  test_block.rs  test_collect.rs  test_graph.rs  test_infer.rs  test_inte.rs  test_pattern.rs  test_ty.rs  test_util.rs  variable_descriptor.rs
crates/llmcc-rust/tests/common/: mod.rs
crates/llmcc-rust/tests/suite/: bind_dependencies.rs  call_descriptor.rs  cross_unit_binding_test.rs  enum_descriptor.rs  function_descriptor.rs  graph_builder_integration.rs  impl_from.rs  let_binding.rs  mod.rs  query_examples.rs  query_integration.rs  scope_insertion.rs  structure_descriptor.rs  variable_descriptor.rs
crates/llmcc-simple/: Cargo.toml  README.md
crates/llmcc-simple/src/: lib.rs
crates/llmcc-simple/tests/: ir_builder_test.rs
crates/llmcc-test/: Cargo.toml  README.md
crates/llmcc-test/src/: case.rs  corpus.rs  engine.rs  expectation.rs  lib.rs  main.rs  materialize.rs  options.rs  pipeline.rs  render.rs  runner.rs
crates/llmcc-test/src/pipeline/: collect.rs  output.rs
crates/llmcc-test/src/snapshot/: block_graph.rs  block_relations.rs  mod.rs  symbols.rs
crates/llmcc-tree/: Cargo.toml
crates/llmcc-tree/src/: config.rs  lib.rs  node_types.rs
crates/llmcc-ts/: Cargo.toml  build.rs
crates/llmcc-ts/src/: bind.rs  collect.rs  infer.rs  lib.rs  pattern.rs  token.rs  token_map.toml
crates/llmcc/src/: lib.rs  main.rs  parse.rs
crates/llmcc/tests/: cli.rs
doc/: claude-skill-llmcc.md  codex.excalidraw  connect_blocks_design.md  llmcc_test_refactor_design.md  parameter-block-design.md  pipeline-design.md  testing.md
examples/: basic.py
llmcc/: __init__.py  api.py  depth_0_project.dot  depth_1_crate.dot  depth_2_module.dot  depth_3_file.dot  test_basic.py
npm/: README.md  package.json
sample/: benchmark.sh  benchmark_results.md  benchmark_results_16.md  benchmark_results_16_windows.md  benchmark_results_4_darwin.md  benchmark_results_8_linux.md  benchmark_results_8_linux_cpp.md  benchmark_results_8_linux_rust.md  benchmark_results_8_linux_typescript.md  clean.sh  fetch.sh  generate_all.sh  projects.sh
(+1611 files in other folders)
