[workspace]
resolver = "2"
members = [
    "crates/llmcc",
    "crates/llmcc-core",
    "crates/llmcc-rust",
    "crates/llmcc-python",
    "crates/debug-python-ast",
]
default-members = ["crates/llmcc"]

[workspace.package]
publish = false
edition = "2021"

[workspace.dependencies]

#
# Workspace member crates
#

llmcc-core = { path = "crates/llmcc-core" }
llmcc-rust = { path = "crates/llmcc-rust" }
llmcc-python = { path = "crates/llmcc-python" }

#
# External crates
#
typed-arena = "2.0.2"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
strum = "0.27"
strum_macros = "0.27"
paste = "1.0.15"
regex = "1.11"
string-interner = "0.19"
ignore = "0.4"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"


[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# Optimization profiles for different use cases
[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-Time Optimization
codegen-units = 1       # Better optimization, slower compilation
strip = true            # Strip debug symbols
panic = "abort"         # Abort on panic (smaller binary)

[profile.release-with-debug]
inherits = "release"
strip = false           # Keep debug symbols
debug = true

[profile.dev]
opt-level = 0           # No optimization for fast compilation
debug = true
split-debuginfo = "packed"

[profile.bench]
inherits = "release"
