[workspace]
resolver = "2"
members = [
    "crates/llmcc-bench",
    "crates/llmcc-bumpalo",
    "crates/llmcc-cli",
    "crates/llmcc-core",
    "crates/llmcc-cpp",
    "crates/llmcc-csharp",
    "crates/llmcc-dot",
    "crates/llmcc-error",
    "crates/llmcc-go",
    "crates/llmcc-java",
    "crates/llmcc-js",
    "crates/llmcc-python",
    "crates/llmcc-rust",
    "crates/llmcc-ts",
    "crates/llmcc-resolver",
    "crates/llmcc-test",
    "crates/llmcc-tree",
]
default-members = ["crates/llmcc-cli"]

[workspace.package]
version = "0.2.65"
description = "llmcc brings multi-depth architecture views for code understanding and generation in extremely fast speed."
license = "Apache-2.0"
documentation = "https://github.com/allenanswerzq/llmcc#readme"
homepage = "https://github.com/allenanswerzq/llmcc"
repository = "https://github.com/allenanswerzq/llmcc.git"
publish = true
edition = "2024"

[workspace.dependencies]

#
# Workspace member crates
#

llmcc = { version = "0.2.65", path = "crates/llmcc-cli" }
llmcc-core = { version = "0.2.65", path = "crates/llmcc-core" }
llmcc-cpp = { version = "0.2.65", path = "crates/llmcc-cpp" }
llmcc-csharp = { version = "0.2.65", path = "crates/llmcc-csharp" }
llmcc-descriptor = { version = "0.2.65", path = "crates/llmcc-descriptor" }
llmcc-dot = { version = "0.2.65", path = "crates/llmcc-dot" }
llmcc-error = { version = "0.2.65", path = "crates/llmcc-error" }
llmcc-go = { version = "0.2.65", path = "crates/llmcc-go" }
llmcc-java = { version = "0.2.65", path = "crates/llmcc-java" }
llmcc-js = { version = "0.2.65", path = "crates/llmcc-js" }
llmcc-python = { version = "0.2.65", path = "crates/llmcc-python" }
llmcc-rust = { version = "0.2.65", path = "crates/llmcc-rust" }
llmcc-ts = { version = "0.2.65", path = "crates/llmcc-ts" }
llmcc-resolver = { version = "0.2.65", path = "crates/llmcc-resolver" }
llmcc-tree = { version = "0.2.65", path = "crates/llmcc-tree" }

#
# External crates
#
typed-arena = "2.0.2"
bumpalo = { version = "3.14", features = ["collections"] }
llmcc-bumpalo = { version = "0.2.65", path = "crates/llmcc-bumpalo" }
tree-sitter = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
strum = "0.27"
strum_macros = "0.27"
paste = "1.0.15"
regex = "1.11"
string-interner = "0.19"
ignore = "0.4"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
parking_lot = "0.12"
dashmap = "6.1"
smallvec = "1.13"
toml = "0.8"
pretty_assertions = "1.4"
shell-words = "1.1"
similar = "2.6"
tempfile = "3.10"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
mimalloc = "0.1"
walkdir = "2.5"
serial_test = "3.1"
textwrap = "0.16"


[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# Optimization profiles for different use cases
[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-Time Optimization
codegen-units = 1       # Better optimization, slower compilation
strip = true            # Strip debug symbols
panic = "abort"         # Abort on panic (smaller binary)

[profile.release-with-debug]
inherits = "release"
strip = false           # Keep debug symbols
debug = true

[profile.dev]
opt-level = 0           # No optimization for fast compilation
debug = true
split-debuginfo = "packed"

[profile.bench]
inherits = "release"
