[package]
name = "llmcc-bindings"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lib]
name = "llmcc_bindings"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
llmcc-core.workspace = true
llmcc-rust.workspace = true
llmcc-python.workspace = true
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
