[package]
name = "llmcc-bumpalo"
version.workspace = true
edition = "2021"
description = "Thread-safe bumpalo wrapper with pre-allocation support. Fork of bumpalo-herd (https://crates.io/crates/bumpalo-herd) with configurable chunk sizes."
license.workspace = true
repository.workspace = true
publish = true
readme = "README.md"

[dependencies]
bumpalo.workspace = true
