[package]
name = "llmcc-cli"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "llmcc"

[lints]
workspace = true

[[bin]]
path = "src/main.rs"
name = "llmcc"

[dependencies]
llmcc-core.workspace = true
llmcc-dot.workspace = true
llmcc-rust.workspace = true
llmcc-py.workspace = true
llmcc-resolver.workspace = true
anyhow.workspace = true
regex.workspace = true
clap.workspace = true
rayon.workspace = true
ignore.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }

[features]
default = []
profile = ["pprof"]

[dependencies.pprof]
version = "0.15"
features = ["flamegraph", "criterion"]
optional = true

[dev-dependencies]
tempfile = "3"
