[package]
name = "llmcc"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "llmcc"

[lints]
workspace = true

[[bin]]
path = "src/main.rs"
name = "llmcc"

[dependencies]
llmcc-core.workspace = true
llmcc-cpp.workspace = true
llmcc-dot.workspace = true
llmcc-rust.workspace = true
llmcc-ts.workspace = true
# llmcc-python.workspace = true
llmcc-resolver.workspace = true
regex.workspace = true
clap.workspace = true
rayon.workspace = true
ignore.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc.workspace = true

[features]
default = []
profile = ["pprof"]

[dependencies.pprof]
workspace = true
optional = true

[dev-dependencies]
tempfile.workspace = true
