[package]
name = "llmcc-collect"
version.workspace = true
edition.workspace = true
description = "Node and edge collection for llmcc graph rendering"
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
llmcc-core.workspace = true
rayon.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
