[package]
name = "llmcc-core"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
typed-arena.workspace = true
bumpalo.workspace = true
llmcc-bumpalo.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tracing.workspace = true
strum.workspace = true
strum_macros.workspace = true
paste.workspace = true
regex.workspace = true
string-interner.workspace = true
ignore.workspace = true
rayon.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
smallvec.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
serial_test.workspace = true
