[package]
name = "llmcc-cpp"
version.workspace = true
description = "C/C++ language support for llmcc"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
llmcc-core.workspace = true
llmcc-resolver.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
stacker.workspace = true
tree-sitter.workspace = true
tree-sitter-cpp.workspace = true
tracing.workspace = true

[build-dependencies]
llmcc-tree.workspace = true
tree-sitter-cpp.workspace = true
