[package]
name = "llmcc-csharp"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
llmcc-core.workspace = true
llmcc-resolver.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter.workspace = true
tracing.workspace = true

[build-dependencies]
llmcc-tree.workspace = true
tree-sitter-c-sharp.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
