[package]
name = "llmcc-descriptor"
version.workspace = true
edition.workspace = true
description = "Shared language-agnostic descriptor data structures for llmcc"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true, features = ["derive"] }
