[package]
name = "llmcc-dot"
version.workspace = true
edition.workspace = true
description = "DOT format graph rendering for llmcc"
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
llmcc-collect.workspace = true
llmcc-core.workspace = true
tracing = "0.1"

