[package]
name = "llmcc-error"
version.workspace = true
description = "Unified error handling for llmcc"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
serde_json.workspace = true
