[package]
name = "llmcc-format"
version.workspace = true
edition.workspace = true
description = "JSON graph format rendering for llmcc"
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
llmcc-core.workspace = true
llmcc-error.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true

[lints]
workspace = true
