[package]
name = "llmcc-py"
version.workspace = true
description = "Python language support for llmcc"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
llmcc-core.workspace = true
llmcc-resolver.workspace = true
parking_lot.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tracing.workspace = true

[build-dependencies]
llmcc-tree.workspace = true
tree-sitter-python.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serial_test.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
textwrap.workspace = true
tempfile.workspace = true
