[package]
name = "llmcc-resolver"
version = "0.2.50"
edition = "2021"
description = "Shared declaration collection and symbol binding logic for llmcc languages"
authors = ["llmcc contributors"]
license = "Apache-2.0"

[dependencies]
llmcc-core = { path = "../llmcc-core", version = "0.2.50" }
tracing = "0.1"
