[package]
name = "llmcc-rust"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
llmcc-core.workspace = true
typed-arena.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
strum.workspace = true
strum_macros.workspace = true
paste.workspace = true
regex.workspace = true
