[package]
name = "llmcc-rust"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
llmcc-core.workspace = true
llmcc-descriptor.workspace = true
llmcc-resolver.workspace = true
tree-sitter-rust.workspace = true
tree-sitter.workspace = true
tracing.workspace = true

[build-dependencies]
anyhow.workspace = true
llmcc-tree.workspace = true
tree-sitter-rust.workspace = true
