[package]
name = "llmcc-rust"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
llmcc-core.workspace = true
llmcc-resolver.workspace = true
tree-sitter-rust.workspace = true
tree-sitter.workspace = true
tracing.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
strum.workspace = true

[build-dependencies]
anyhow.workspace = true
llmcc-tree.workspace = true
tree-sitter-rust.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serial_test.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
textwrap.workspace = true
