[package]
name = "llmcc-simple"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
authors = ["llmcc contributors"]
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
llmcc-core.workspace = true
paste.workspace = true

[dev-dependencies]
