[package]
name = "llmcc-test"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
llmcc-core.workspace = true
llmcc-resolver.workspace = true
llmcc-rust.workspace = true
shell-words = "1.1"
similar = "2.6"
tempfile = "3.10"
walkdir = "2.5"

[lints]
workspace = true
