[package]
name = "llmcc-test"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
llmcc-cli.workspace = true
llmcc-core.workspace = true
llmcc-resolver.workspace = true
llmcc-rust.workspace = true
regex.workspace = true
shell-words.workspace = true
similar.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[lints]
workspace = true
