[package]
name = "llmcc-test"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
llmcc-core.workspace = true
llmcc-cpp.workspace = true
llmcc-error.workspace = true
llmcc-format.workspace = true
llmcc-resolver.workspace = true
llmcc-rust.workspace = true
llmcc-ts.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[lints]
workspace = true
