[package]
name = "llmcc-tree"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
llmcc-error.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tree-sitter.workspace = true

[lints]
workspace = true
