[package]
name = "llmcc-ts"
version.workspace = true
description = "TypeScript language support for llmcc"
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
llmcc-core.workspace = true
llmcc-resolver.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tracing.workspace = true

[build-dependencies]
anyhow.workspace = true
llmcc-tree.workspace = true
tree-sitter-typescript.workspace = true
