[package]
name = "llmcc"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
default-run = "llmcc"

[lints]
workspace = true

[[bin]]
path = "src/main.rs"
name = "llmcc"

[[bin]]
path = "src/parse.rs"
name = "llmcc-parse"

[dependencies]
llmcc-rust.workspace = true
tree-sitter-rust.workspace = true
regex.workspace = true
