[package]
name = "llmcc"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "llmcc"

[lints]
workspace = true

[[bin]]
path = "src/main.rs"
name = "llmcc"

[lib]
path = "src/lib.rs"
name = "llmcc"

[dependencies]
llmcc-core.workspace = true
llmcc-rust.workspace = true
llmcc-python.workspace = true
regex.workspace = true
clap.workspace = true
rayon.workspace = true
