[package]
name = "llmcc"
version.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "llmcc"

[lints]
workspace = true

[[bin]]
path = "src/main.rs"
name = "llmcc"

[dependencies]
llmcc-core.workspace = true
llmcc-rust.workspace = true
llmcc-python.workspace = true
llmcc-resolver.workspace = true
anyhow.workspace = true
regex.workspace = true
clap.workspace = true
rayon.workspace = true
ignore.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
